--- a/rca/project_styleguide/templates/patterns/organisms/carousel/carousel--square.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/carousel/carousel--square.yaml
@@ -1,6 +1,6 @@
 context:
   modifier: 'carousel--square'
-  datatag: 'data-square-carousel'
+  datatag: 'data-peek-carousel'
   carousel:
     - slide:
       value:
